Fix image stretching

--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ img {
   border-radius: 50%;
   width:400px;
   height:400px;
-  object-fit: cover; /*prevents image stretching*/
 }
 
 
